[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
    "logfire[fastapi]>=0.25.1",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
]
